--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/NotesBlockStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/NotesBlockStyles.xaml
@@ -23,6 +23,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Constants.xaml" />
+        <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/CustomControls/InfoBlockStyles.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <Style x:Key="NotesBlockFirstItemStyle">
