#99 - removed commented code

--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/PanelWithTitleStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/PanelWithTitleStyles.xaml
@@ -27,11 +27,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     <Style x:Key="{x:Type styles:PanelWithTitle}" TargetType="{x:Type styles:PanelWithTitle}">
         <Setter Property="IsTabStop" Value="False" />
+
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type styles:PanelWithTitle}">
 
-                    <DockPanel Margin="0 0 0 20">
+                    <DockPanel>
 
                         <Border
                             DockPanel.Dock="Top"
@@ -58,16 +59,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                         <ContentPresenter />
 
-                        <!--<ContentControl
-                            Grid.Column="2"
-                            Content="{TemplateBinding Content}"
-                            IsTabStop="False">
-                            <ContentControl.Resources>
-                                <Style TargetType="{x:Type TextBlock}">
-                                    <Setter Property="TextWrapping" Value="Wrap" />
-                                </Style>
-                            </ContentControl.Resources>
-                        </ContentControl>-->
                     </DockPanel>
 
                 </ControlTemplate>
