--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/TextBoxStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/TextBoxStyles.xaml
@@ -30,9 +30,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
         <Setter Property="MinWidth" Value="40" />
         <Setter Property="Padding" Value="11 8" />
-        <Setter Property="Background" Value="#ffffff" />
+        <Setter Property="Background" Value="{StaticResource PrimaryLightBrush}" />
         <Setter Property="BorderThickness" Value="1" />
-        <Setter Property="BorderBrush" Value="#C4C4C4" />
+        <Setter Property="BorderBrush" Value="{StaticResource PrimaryLightBrush}" />
         <Setter Property="FontFamily" Value="{StaticResource DefaultFontFamily}" />
         <Setter Property="FontSize" Value="{StaticResource DefaultFontSize}" />
         <Setter Property="Foreground" Value="{StaticResource FontPrimaryBrush}" />
@@ -66,7 +66,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                                 <Condition Property="IsReadOnly" Value="False" />
                             </MultiTrigger.Conditions>
                             <MultiTrigger.Setters>
-                                <Setter Property="BorderBrush" Value="{StaticResource SelectedBorderBrush}" />
+                                <Setter Property="BorderBrush" Value="{StaticResource AccentBrush}" />
                             </MultiTrigger.Setters>
                         </MultiTrigger>
 
