--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/Buttons/ToolBarButtonStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/Buttons/ToolBarButtonStyles.xaml
@@ -46,6 +46,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <Setter Property="Foreground" Value="{StaticResource ToolBarButtonNormalForegroundBrush}" />
         <Setter Property="Width" Value="32" />
         <Setter Property="Height" Value="32" />
+        <Setter Property="Padding" Value="0" />
 
         <Style.Triggers>
 
