--- a/sources/VeloCity.Wpf.Presentation/Pages/CloseSprintConfirmation/CloseSprintConfirmationWindow.xaml
+++ b/sources/VeloCity.Wpf.Presentation/Pages/CloseSprintConfirmation/CloseSprintConfirmationWindow.xaml
@@ -17,24 +17,24 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <Window
-    x:Class="DustInTheWind.VeloCity.Wpf.Presentation.Pages.StartSprintConfirmation.StartSprintConfirmationWindow"
+    x:Class="DustInTheWind.VeloCity.Wpf.Presentation.Pages.CloseSprintConfirmation.CloseSprintConfirmationWindow"
 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:startSprintConfirmation="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Pages.StartSprintConfirmation"
     xmlns:converters="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Converters"
+    xmlns:closeSprintConfirmation="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Pages.CloseSprintConfirmation"
 
     mc:Ignorable="d"
-    Title="Start Sprint"
+    Title="Close Sprint"
     Height="400"
     Width="640"
     WindowStartupLocation="CenterOwner"
     ShowInTaskbar="False"
     ResizeMode="CanResizeWithGrip"
     WindowStyle="SingleBorderWindow"
-    d:DataContext="{d:DesignInstance startSprintConfirmation:StartSprintConfirmationViewModel}">
+    d:DataContext="{d:DesignInstance closeSprintConfirmation:CloseSprintConfirmationViewModel}">
 
     <Window.Resources>
         <ResourceDictionary>
@@ -66,7 +66,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             </Border.Resources>
 
             <TextBlock VerticalAlignment="Center">
-                <TextBlock Text="Start Sprint" />
+                <TextBlock Text="Close Sprint" />
                 <TextBlock Text="{Binding SprintNumber}" />
                 <TextBlock Text="-" />
                 <TextBlock Text="{Binding SprintName}" />
@@ -112,24 +112,24 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             <TextBlock
                 Grid.Row="0"
                 Grid.Column="0"
-                Text="Commitment Story Points"
+                Text="Actual Story Points"
                 VerticalAlignment="Center" />
 
             <TextBox
                 Grid.Row="0"
                 Grid.Column="2"
-                Text="{Binding CommitmentStoryPoints, Converter={StaticResource StoryPointsToNumberConverter}}" />
+                Text="{Binding ActualStoryPoints, Converter={StaticResource StoryPointsToNumberConverter}}" />
 
             <TextBlock
                 Grid.Row="1"
                 Grid.Column="0"
-                Text="Description"
+                Text="Comments"
                 VerticalAlignment="Center" />
 
             <TextBox
                 Grid.Row="1"
                 Grid.Column="2"
-                Text="{Binding Description}"
+                Text="{Binding Comments}"
                 Style="{StaticResource MultilineTextBoxStyle}"
                 Margin="0 10 0 0" />
         </Grid>
