--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/StopIconStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/StopIconStyles.xaml
@@ -28,6 +28,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <Style TargetType="{x:Type styles:StopIcon}">
         <Setter Property="Foreground" Value="OrangeRed" />
         <Setter Property="Background" Value="Transparent" />
+        <Setter Property="IsTabStop" Value="False" />
 
         <Setter Property="Template">
             <Setter.Value>
