--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/IconButtonStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/IconButtonStyles.xaml
@@ -18,27 +18,25 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:styles="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Styles">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Constants.xaml" />
+        <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/StandardControls/ButtonStyles.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <Style
-        TargetType="{x:Type Button}"
-        x:Key="BaseButtonStyle">
+        TargetType="{x:Type styles:IconButton}"
+        BasedOn="{StaticResource DefaultButtonStyle}">
 
-        <Setter Property="SnapsToDevicePixels" Value="True" />
-        <Setter Property="FontFamily" Value="{StaticResource DefaultFontFamily}" />
-        <Setter Property="FontSize" Value="14" />
-        <Setter Property="Margin" Value="0" />
-        <Setter Property="Padding" Value="20 0" />
-        <Setter Property="MinHeight" Value="42" />
-        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Foreground" Value="{StaticResource FontPrimaryBrush}" />
+        <Setter Property="Background" Value="Transparent" />
 
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type Button}">
+                <ControlTemplate TargetType="{x:Type styles:IconButton}">
+
                     <Border
                         CornerRadius="2"
                         Background="{TemplateBinding Background}"
@@ -48,15 +46,35 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                         Height="{TemplateBinding Height}"
                         Padding="{TemplateBinding Padding}">
 
-                        <ContentPresenter
-                            Content="{TemplateBinding Content}"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center" />
+                        <StackPanel Orientation="Horizontal">
+
+                            <ContentPresenter
+                                Content="{TemplateBinding Icon}"
+                                Margin="0 0 8 0">
+
+                                <ContentPresenter.Effect>
+                                    <DropShadowEffect
+                                        Color="{StaticResource PrimaryColor}"
+                                        Direction="0"
+                                        ShadowDepth="0"
+                                        BlurRadius="10" />
+                                </ContentPresenter.Effect>
+
+                            </ContentPresenter>
+
+                            <ContentPresenter
+                                Content="{TemplateBinding Content}"
+                                VerticalAlignment="Center" />
+
+                        </StackPanel>
 
                     </Border>
+
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+
+
     </Style>
 
 </ResourceDictionary>
