--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/RefreshIconStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/RefreshIconStyles.xaml
@@ -25,11 +25,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Constants.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <Style TargetType="{x:Type styles:StartIcon}">
-        <Setter Property="Foreground" Value="MediumSeaGreen" />
+    <Style TargetType="{x:Type styles:RefreshIcon}">
+        <Setter Property="Foreground" Value="{StaticResource IconPrimaryBrush}" />
         <Setter Property="Background" Value="Transparent" />
-        <Setter Property="Width" Value="32" />
-        <Setter Property="Height" Value="32" />
+        <Setter Property="Width" Value="64" />
+        <Setter Property="Height" Value="64" />
         <Setter Property="IsTabStop" Value="False" />
 
         <Setter Property="Template">
@@ -47,23 +47,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                             Margin="{TemplateBinding Padding}">
 
                             <Path
+                                Width="34.8333"
+                                Height="41.1667"
+                                Stretch="Fill"
                                 Fill="{TemplateBinding Foreground}"
-                                Stroke="{TemplateBinding Foreground}">
-
-                                <Path.Data>
-                                    <CombinedGeometry GeometryCombineMode="Exclude">
-
-                                        <CombinedGeometry.Geometry1>
-                                            <EllipseGeometry RadiusX="16" RadiusY="16" Center="16,16" />
-                                        </CombinedGeometry.Geometry1>
-
-                                        <CombinedGeometry.Geometry2>
-                                            <PathGeometry Figures="M 11 7.34 L 26 16 11 24.66 Z" />
-                                        </CombinedGeometry.Geometry2>
-
-                                    </CombinedGeometry>
-                                </Path.Data>
-                            </Path>
+                                Data="F1 M 38,20.5833C 42.9908,20.5833 47.4912,22.6825 50.6667,26.046L 50.6667,17.4167L 55.4166,22.1667L 55.4167,34.8333L 42.75,34.8333L 38,30.0833L 46.8512,30.0833C 44.6768,27.6539 41.517,26.125 38,26.125C 31.9785,26.125 27.0037,30.6068 26.2296,36.4167L 20.6543,36.4167C 21.4543,27.5397 28.9148,20.5833 38,20.5833 Z M 38,49.875C 44.0215,49.875 48.9963,45.3932 49.7703,39.5833L 55.3457,39.5833C 54.5457,48.4603 47.0852,55.4167 38,55.4167C 33.0092,55.4167 28.5088,53.3175 25.3333,49.954L 25.3333,58.5833L 20.5833,53.8333L 20.5833,41.1667L 33.25,41.1667L 38,45.9167L 29.1487,45.9167C 31.3231,48.3461 34.483,49.875 38,49.875 Z " />
 
                         </Grid>
 
