--- a/sources/VeloCity.Wpf.Presentation/Pages/CloseSprintConfirmation/CloseSprintConfirmationWindow.xaml
+++ b/sources/VeloCity.Wpf.Presentation/Pages/CloseSprintConfirmation/CloseSprintConfirmationWindow.xaml
@@ -25,6 +25,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:converters="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Converters"
     xmlns:closeSprintConfirmation="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Pages.CloseSprintConfirmation"
+    xmlns:styles="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Styles;assembly=DustInTheWind.VeloCity.Wpf.Presentation.Styles"
 
     mc:Ignorable="d"
     Title="Close Sprint"
@@ -33,7 +34,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     WindowStartupLocation="CenterOwner"
     ShowInTaskbar="False"
     ResizeMode="CanResizeWithGrip"
-    WindowStyle="SingleBorderWindow"
+    WindowStyle="None"
     d:DataContext="{d:DesignInstance closeSprintConfirmation:CloseSprintConfirmationViewModel}">
 
     <Window.Resources>
@@ -41,6 +42,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/StandardControls/StandardControlStyles.xaml" />
                 <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Constants.xaml" />
+                <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/CustomControls/CloseIconStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <converters:StoryPointsToNumberConverter x:Key="StoryPointsToNumberConverter" />
@@ -57,7 +59,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             DockPanel.Dock="Top"
             MinHeight="50"
             Background="{StaticResource PrimaryDarkBrush}"
-            Padding="30 20">
+            Padding="30 20"
+            MouseDown="UIElement_OnMouseDown">
 
             <Border.Resources>
                 <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource {x:Type TextBlock}}">
@@ -65,12 +68,25 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 </Style>
             </Border.Resources>
 
-            <TextBlock VerticalAlignment="Center">
-                <TextBlock Text="Close Sprint" />
-                <TextBlock Text="{Binding SprintNumber}" />
-                <TextBlock Text="-" />
-                <TextBlock Text="{Binding SprintName}" />
-            </TextBlock>
+            <DockPanel>
+
+                <styles:CloseIcon
+                    DockPanel.Dock="Left"
+                    Margin="0 0 20 0"
+                    Width="32"
+                    Height="32"/>
+
+                <TextBlock
+                    Text="{Binding Title}"
+                    VerticalAlignment="Center">
+                    <TextBlock Text="Close Sprint" />
+                    <TextBlock Text="{Binding SprintNumber}" />
+                    <TextBlock Text="-" />
+                    <TextBlock Text="{Binding SprintName}" />
+                </TextBlock>
+
+            </DockPanel>
+
         </Border>
 
         <Border
@@ -85,13 +101,15 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <Button
                     Content="Cancel"
                     IsCancel="True"
-                    MinWidth="100" />
+                    MinWidth="100"
+                    TabIndex="4"/>
 
                 <Button
                     Content="Ok"
                     IsDefault="True"
                     MinWidth="100"
-                    Click="ButtonBase_OnClick" />
+                    Click="ButtonBase_OnClick"
+                    TabIndex="3"/>
 
             </StackPanel>
         </Border>
@@ -109,29 +127,35 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <TextBlock
+            <Label
                 Grid.Row="0"
                 Grid.Column="0"
-                Text="Actual Story Points"
-                VerticalAlignment="Center" />
+                Content="_Actual Story Points"
+                VerticalAlignment="Center"
+                Target="TextBoxActualStoryPoints"/>
 
             <TextBox
                 Grid.Row="0"
                 Grid.Column="2"
-                Text="{Binding ActualStoryPoints, Converter={StaticResource StoryPointsToNumberConverter}}" />
+                x:Name="TextBoxActualStoryPoints"
+                Text="{Binding ActualStoryPoints, Converter={StaticResource StoryPointsToNumberConverter}}"
+                TabIndex="1"/>
 
-            <TextBlock
+            <Label
                 Grid.Row="1"
                 Grid.Column="0"
-                Text="Comments"
-                VerticalAlignment="Center" />
+                Content="_Comments"
+                VerticalAlignment="Center"
+                Target="TextBoxComments"/>
 
             <TextBox
                 Grid.Row="1"
                 Grid.Column="2"
+                x:Name="TextBoxComments"
                 Text="{Binding Comments}"
                 Style="{StaticResource MultilineTextBoxStyle}"
-                Margin="0 10 0 0" />
+                Margin="0 10 0 0"
+                TabIndex="2"/>
         </Grid>
 
     </DockPanel>
