--- a/sources/VeloCity.Wpf.Presentation/Pages/SprintsList/SprintsListView.xaml
+++ b/sources/VeloCity.Wpf.Presentation/Pages/SprintsList/SprintsListView.xaml
@@ -48,7 +48,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
         <StackPanel
             Orientation="Horizontal"
-            DockPanel.Dock="Top">
+            DockPanel.Dock="Top"
+            Visibility="Collapsed">
 
             <Button
                 Style="{StaticResource ToolBarButtonStyle}"
